--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,11 @@ header{
   height: 100px;
 }
 
-.espacio{
-  width: 20%;
-}
-
 .redes{
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin-left: 20%;
 }
 
 .redes img{
