Remove padding:0 and margin:0 from the * selector
Apply padding: 0; and margin: 0; to all your HTML elements is a bad practice.

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 /*GENERAL*/
 
 *{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    transition: all 0.5s;
+  box-sizing: border-box;
+  transition: all 0.5s;
   }
+
+body{
+  margin: 0;
+}
 
 a{
   text-decoration: none; /*07-Quitar el subrayado de los enlaces*/
@@ -14,16 +16,16 @@ a{
 /*HEADER*/
 
 header{
-    width: 100%;
-    background-color: rgb(89,173,156); /*02-Color de fondo*/
-    height: 150px;
-    display: flex;
+  width: 100%;
+  background-color: rgb(89,173,156); /*02-Color de fondo*/
+  height: 150px;
+  display: flex;
 }
 
 .img-header{
-    width: 20%;
-    display: flex;
-    justify-content: flex-end;
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .circulo{
@@ -99,7 +101,6 @@ header{
   text-align: center;
   font-size: 35px; /*05-Tamaño de letra*/
   color: rgb(89,173,156);
-
 }
 
 .seccion{
@@ -175,10 +176,11 @@ header{
   text-align: center;
   font-size: 50px;
   color: rgb(89,173,156);
+  margin: 0;
 }
 
 .punto:last-child{
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .centro{
@@ -193,7 +195,7 @@ header{
 
 footer{
   background-color: rgb(89,173,156);
-  height: 120px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
